dataset1235/2025-2/2947369575/users/126276963/executions/1003782500_4233865845.log
== RUN (2025-08-28 15:25:46)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:27:46)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:", round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:25:44)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:22:57)
-- CODE: 
celsius=float(input())
fahrenheit=celsius*(9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
A temperatura em fahrenheit é:86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:20:02)
-- CODE: 
celsius=float(input())
fahrenheit=celsius*(9/5)+32
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:25:13)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:27:12)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:25:48)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:23:58)
-- CODE: 
celsius=float(input("Digite a temperatura em Celsius:"))
fahrenheit=(celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:25:15)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:27:16)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(f"A temperatura em fahrenheit é:", round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:27:38)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:", round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:25:08)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:24:55)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:26:02)
-- CODE: 
celsius = float(input("Digite a temperatura em Celsius:"))
fahrenheit = (celsius*9/5)+32
print(f"A temperatura em fahrenheit é:{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura em Celsius:A temperatura em fahrenheit é:86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
